syntax = "proto3";
option go_package = ".;grpc";

import "google/api/annotations.proto";

message CreatePublicationRequest {
  uint64 brand = 1;
  uint64 model = 2;
  string vin = 3;
  string production_year = 4;
  uint64 mileage = 5;
  uint32 pics_count = 6;
  uint32 owner_count = 7;
  uint32 color = 8;
  uint32 body_type = 9;
  uint32 drive_gear = 10;
  uint32 gear_box = 11;
  uint32 engine_type = 12;
  uint32 engine_capacity = 13;
  uint32 engine_power = 14;
  string description = 15;
}

message CreatePublicationResponse {
  uint64 id = 1;
}

service AutoMarket {
  rpc CreatePublication(CreatePublicationRequest) returns(CreatePublicationResponse) {
    option(google.api.http) = {
      post: "/api/v1/publication",
      body: "*"
    };
  }
}